# Proyecto1Progra2

./: CMakeLists.txt  Computadora.cpp  Computadora.h  DecoradorEquipo.cpp  DecoradorEquipo.h  Equipo.cpp  Equipo.h  EquipoGeneral.cpp  EquipoGeneral.h  Incidencia.cpp  Incidencia.h  Mouse.cpp  Mouse.h  Teclado.cpp  Teclado.h
